--- a/src/sensor_package/package.xml
+++ b/src/sensor_package/package.xml
@@ -6,6 +6,9 @@
   <description>Sensor server-client service for an automated sensor. Part of an application for a Robotics Software Engineer position at Machina Labs.</description>
   <maintainer email="varunkamat99@gmail.com">varun</maintainer>
   <license>Apache-2.0</license>
+  
+  <depend>rclpy</depend>
+  <depend>example_interfaces</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
