--- a/src/sensor_package_cpp/package.xml
+++ b/src/sensor_package_cpp/package.xml
@@ -9,7 +9,7 @@
   <buildtool_depend>ament_cmake_python</buildtool_depend>
   <depend>rclcpp</depend>
   <depend>rclpy</depend>
-
+  <depend>custom_interfaces</depend>
   <buildtool_depend>ament_cmake</buildtool_depend>
   <depend>example_interfaces</depend>
   <test_depend>ament_lint_auto</test_depend>
