--- a/src/sensor_package_cpp/CMakeLists.txt
+++ b/src/sensor_package_cpp/CMakeLists.txt
@@ -5,7 +5,7 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-# set(CMAKE_CXX_STANDARD 17) # Humble targets C++17.
+set(CMAKE_CXX_STANDARD 17) # Humble targets C++17.
 # Find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(ament_cmake_python REQUIRED)
